# brick-by-brick

./: README.md
backend/: Cargo.toml
backend/src/: habit.rs  handlers.rs  main.rs  notifications.rs
backend/src/db/: db.rs  habits.db
backend/src/models/: habit.rs
backend/src/notifications/: notifications.rs
backend/src/routes/: auth.rs  handlers.rs  mod.rs
frontend/: package.json
frontend/api/: habits.js
frontend/components/: HabitForm.tsx  HabitItem.tsx  HabitList.tsx  NotificationList.tsx
frontend/pages/: _document.tsx  index.tsx  settings.tsx
frontend/styles/: globals.css
frontend/utils/: api.ts  date.ts  notifications.ts
