[package]
name = "brick_by_brick"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-rustls"] } 
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"           
chrono = { version = "0.4", features = ["serde"] }  # Add serde feature here
uuid = { version = "1.0", features = ["v4"] } 
dotenv = "0.15"